add: event register, view event registered