@@ -9,8 +9,8 @@ import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import com.int371.eventhub.dto.EventImageResponse;
-import com.int371.eventhub.dto.EventResponse;
+import com.int371.eventhub.dto.EventImageResponseDto;
+import com.int371.eventhub.dto.EventResponseDto;
 import com.int371.eventhub.entity.Event;
 import com.int371.eventhub.entity.EventImage;
 import com.int371.eventhub.exception.ResourceNotFoundException;
@@ -28,7 +28,7 @@ public class EventService {
     private static final Set<String> CATEGORIES_FOR_ALL_EVENTS = Set.of("card", "slideshow");
     private static final Set<String> CATEGORIES_FOR_EVENT_BY_ID = Set.of("detail", "map");
 
-public List<EventResponse> getAllEvents() {
+    public List<EventResponseDto> getAllEvents() {
     List<Event> events = eventRepository.findAll();
 
     if (events.isEmpty()) {
@@ -37,10 +37,10 @@ public List<EventResponse> getAllEvents() {
     
     return events.stream()
                 .map(event -> convertEventToDtoWithImageStructure(event, CATEGORIES_FOR_ALL_EVENTS))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public EventResponse getEventById(Integer id) {
+    public EventResponseDto getEventById(Integer id) {
         Event event = eventRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Event not found with id: " + id));
 
@@ -48,8 +48,8 @@ public List<EventResponse> getAllEvents() {
     
     }
 
-    private EventResponse convertEventToDtoWithImageStructure(Event event, Set<String> allowedCategoryNames) {
-        EventResponse dto = modelMapper.map(event, EventResponse.class);
+    private EventResponseDto convertEventToDtoWithImageStructure(Event event, Set<String> allowedCategoryNames) {
+        EventResponseDto dto = modelMapper.map(event, EventResponseDto.class);
 
         if (event.getImages() != null && !event.getImages().isEmpty()) {
             Map<String, String> imageMap = event.getImages().stream()
@@ -64,7 +64,7 @@ public List<EventResponse> getAllEvents() {
                     EventImage::getImgPathEv,
                     (existingPath, newPath) -> existingPath 
                 ));
-            EventImageResponse imageResponse = new EventImageResponse();
+            EventImageResponseDto imageResponse = new EventImageResponseDto();
             imageResponse.setImageCard(imageMap.get("card"));
             imageResponse.setImageSlideShow(imageMap.get("slideshow"));
             imageResponse.setImageDetail(imageMap.get("detail"));
